--- a/direflow-components/bz-experience/package.json
+++ b/direflow-components/bz-experience/package.json
@@ -8,16 +8,22 @@
     "test": "react-app-rewired test --env=jest-environment-jsdom-fourteen"
   },
   "dependencies": {
+    "@date-io/core": "^1.3.11",
+    "@date-io/moment": "^1.3.11",
+    "@material-ui/core": "^4.6.1",
+    "@material-ui/pickers": "^3.2.7",
     "@types/node": "12.7.8",
     "@types/react": "16.9.3",
     "@types/react-dom": "16.9.1",
+    "date-fns": "^2.7.0",
     "direflow-component": "1.0.17",
+    "moment": "^2.24.0",
     "react": "16.10.1",
     "react-dom": "16.10.1",
     "react-scripts": "3.1.2",
     "style-it": "2.1.4",
-    "typescript": "^3.7.0",
-    "tslint": "5.20.0"
+    "tslint": "5.20.0",
+    "typescript": "^3.7.0"
   },
   "devDependencies": {
     "@types/jest": "24.0.18",
