--- a/direflow-components/bz-experience/package.json
+++ b/direflow-components/bz-experience/package.json
@@ -11,6 +11,7 @@
     "@date-io/core": "^1.3.11",
     "@date-io/moment": "^1.3.11",
     "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.5.1",
     "@material-ui/pickers": "^3.2.7",
     "@types/node": "12.7.8",
     "@types/react": "16.9.3",
