--- a/direflow-components/bz-experience/package.json
+++ b/direflow-components/bz-experience/package.json
@@ -13,11 +13,13 @@
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/pickers": "^3.2.7",
+    "@types/lodash.sumby": "^4.6.6",
     "@types/node": "12.7.8",
     "@types/react": "16.9.3",
     "@types/react-dom": "16.9.1",
     "date-fns": "^2.7.0",
     "direflow-component": "1.0.17",
+    "lodash.sumby": "^4.6.0",
     "moment": "^2.24.0",
     "react": "16.10.1",
     "react-dom": "16.10.1",
